# mursim

./: .gitignore  README.md
mursim_common/: CMakeLists.txt  package.xml
mursim_common/msg/: car_info_msg.msg  car_state_msg.msg
mursim_common/rviz/: rviz_config.rviz
mursim_description/: CMakeLists.txt  package.xml
mursim_description/cars/19E-dynamic/config/: car.yaml  sensors.yaml
mursim_description/cars/19E-dynamic/urdf/: vehicle_chassis.xacro  vehicle_materials.xacro  vehicle_plugins.xacro  vehicle_properties.xacro  vehicle_sensors_links.xacro
mursim_description/cars/19E/config/: car.yaml  dimensions.yaml  sensors.yaml
mursim_description/cars/19E/mesh/: chassis.dae
mursim_description/cars/19E/urdf/: vehicle.xacro  vehicle_friction.gazebo  vehicle_plugins.xacro  vehicle_sensors.xacro  vehicle_sensors_links.xacro
mursim_description/cars/gotthard/config/: car.yaml  sensors.yaml
mursim_description/cars/gotthard/mesh/: chassis.dae
mursim_description/cars/gotthard/urdf/: vehicle.xacro  vehicle_chassis.xacro  vehicle_friction.gazebo  vehicle_materials.xacro  vehicle_plugins.xacro  vehicle_properties.xacro  vehicle_sensors.xacro  vehicle_sensors_links.xacro
mursim_description/launch/: spawn_vehicle.launch
mursim_description/models/big_cone/: model.config  model.sdf
mursim_description/models/blue_cone/: model.config  model.sdf
mursim_description/models/empty_world/: model.config  model.sdf
mursim_description/models/ground_plane/: model.sdf
mursim_description/models/large_track/: model.config  model.sdf
mursim_description/models/medium_track/: mode.config  model.sdf
mursim_description/models/meshes/: cone.dae  cone_big.dae  cone_blue.dae  cone_yellow.dae  uneven_terrain.dae  uneven_terrain_2.dae  uneven_terrain_3.dae
mursim_description/models/orange_cone/: model.config  model.sdf
mursim_description/models/small_track/: model.sdf  parsing.py
mursim_description/models/uneven_plane/: model.config  model.sdf
mursim_description/models/yellow_cone/: model.config  model.sdf
mursim_gazebo/: CMakeLists.txt  package.xml
mursim_gazebo/launch/: auto_pipeline.launch  eufs_track.launch  fast_lap.launch  slow_lap.launch  slow_lap_2.launch  spawn_world.launch  test.launch
mursim_gazebo/worlds/: eufs2_track.world  eufs_track.world  large_track.world  medium_track.world  uneven_track.world
mursim_gazebo_plugins/: CMakeLists.txt  package.xml
mursim_gazebo_plugins/controller/: package.xml
mursim_gazebo_plugins/controller/config/: vehicle_control.yaml
mursim_gazebo_plugins/controller/launch/: vehicle_control.launch
mursim_gazebo_plugins/gz_vehicle_model_plugin/: CMakeLists.txt  package.xml
mursim_gazebo_plugins/gz_vehicle_model_plugin/include/: aero.hpp  axle.hpp  connection.hpp  model_plugin.hpp  params.hpp  state.hpp  vehicle.hpp  wheel.hpp
mursim_gazebo_plugins/gz_vehicle_model_plugin/src/: axle.cpp  model_plugin.cpp  vehicle.cpp  wheel.cpp
mursim_gazebo_plugins/mursim_physics/: CMakeLists.txt  package.xml
mursim_gazebo_plugins/mursim_physics/include/: aero.hpp  axle.hpp  config.hpp  connection.hpp  mursim_physics.hpp  params.hpp  state.hpp  vehicle.hpp  wheel.hpp
mursim_gazebo_plugins/mursim_physics/src/: axle.cpp  mursim_physics.cpp  vehicle.cpp  wheel.cpp
mursim_gazebo_plugins/rviz/: rviz_config.rviz
mursim_rqt_plugins/: CMakeLists.txt  package.xml
