<?xml version="1.0"?>
<package format="2">
  <name>mursim_gazebo</name>
  <version>1.0.0</version> <description>MURSim Gazebo</description>
  <maintainer email="leong.joseph@me.com">leongjoseph</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
      <gazebo_ros gazebo_model_path="${prefix}/../mursim_description/models"/>
      <gazebo_ros gazebo_media_path="${prefix}/../mursim_description"/>
  </export>

</package>
