<?xml version="1.0"?>
<package format="2">
  <name>mursim_gazebo_plugins</name>
  <license>MIT</license>
  <version>1.0.0</version>
  <maintainer email="leong.joseph@me.com">Joseph Leong</maintainer>
  <description>MURSim Gazebo - Plugins</description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mursim_common</build_depend>
  <build_depend>roscpp</build_depend>

</package>
