<?xml version="1.0"?>
<package format="2">
  <name>mursim_physics</name>
  <version>0.0.0</version>
  <description>The mursim_physics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="leongjoseph@me.com">Joseph Leong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <gazebo_plugin_path="$(prefix)/lib"/>
  </export>
</package>
